--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Title</title>
 </head>
 <body>
     <!--Navigation Bar-->
@@ -32,6 +32,28 @@
                 </li>
             </ul>
         </nav>
+        <!--Header-->
+        <section class="hello">
+            <header class="">
+                <img src="" alt="Anne Brown portrait">
+                <h1>
+                    Hello, I'm Anne!
+                </h1>
+                <h3>
+                    Commercial Photographer
+                </h3>
+                <p>
+                    Lorem ipsum blablablablaablablababalala <br>
+                    xbasicnsoiacioscnaosjcnisoaniocnsioiosa <br>
+                    cnancsalnciksnckinasiconsoincoisancicnc
+                </p>
+                <a href="#" class=button>
+                    Read More
+                </a>
+            </header>
+        </section>
+
+        <!--Services-->
         
     </div>
 </body>
