Add services div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Title</title>
 </head>
 <body>
+
     <!--Navigation Bar-->
+
     <div class="wrapper">
         <nav>
             <ul class="navbar">
@@ -32,7 +34,9 @@
                 </li>
             </ul>
         </nav>
+
         <!--Header-->
+
         <section class="hello">
             <header class="">
                 <img src="" alt="Anne Brown portrait">
@@ -54,7 +58,22 @@
         </section>
 
         <!--Services-->
-        
+        <div class="services_div">
+            <section class="services">
+                <div class="food">
+                    <h3>food</h3>
+                </div>
+                <div class="wedding">
+                    <h3>wedding</h3>
+                </div>
+                <div class="architecture">
+                    <h3>architecture</h3>
+                </div>
+            </section>
+        </div>
+
+        <!--My Works-->
+
     </div>
 </body>
 </html>
