--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
         </div>
 
         <!--My Works-->
+        <div class="works_div">
+            <section class="works">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+            </section>
+        </div>
+
+        <!--Footer-->
+        
 
     </div>
 </body>
