--- a/index.html
+++ b/index.html
@@ -88,8 +88,22 @@
         </div>
 
         <!--Footer-->
-        
-
+        <footer class="foot">
+            <ul>
+                <li>
+                    <a href="#">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </div>
 </body>
 </html>
