--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
 
     <!--Navigation Bar-->
 
-    <div class="wrapper">
-        <nav>
-            <ul class="navbar">
-                <li>
+    <div class="content">
+            <h1 class="logo">
                 Anne Brown
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Experience</a>
-                </li>
-                <li>
-                    <a href="#">Education</a>
-                </li>
-                <li>
-                    <a href="#">Works</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
+            </h1>
+            <nav class="navbar">
+                <ul class="navlist">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Experience</a>
+                    </li>
+                    <li>
+                        <a href="#">Education</a>
+                    </li>
+                    <li>
+                        <a href="#">Works</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
 
-        <!--Header-->
+        <!--Welcome Section-->
 
-        <section class="hello">
-            <header class="">
+        <section class="container_top">
+            <header class="welcome">
                 <img src="" alt="Anne Brown portrait">
                 <h1>
                     Hello, I'm Anne!
