--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    
     <title>Title</title>
 </head>
 <body>
@@ -12,11 +13,11 @@
     <!--Navigation Bar-->
 
     <div class="content">
-            <h1 class="logo">
-                Anne Brown
-            </h1>
             <nav class="navbar">
-                <ul class="navlist">
+                <ul>
+                    <li>
+                        <a href="#">Anne Brown</a>
+                    </li>
                     <li>
                         <a href="#">About</a>
                     </li>
