--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    
+
     <title>Title</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <nav class="navbar">
                 <ul>
                     <li>
-                        <a href="#">Anne Brown</a>
+                        <a href="#">John Brown</a>
                     </li>
                     <li>
                         <a href="#">About</a>
@@ -40,9 +40,8 @@
 
         <section class="container_top">
             <header class="welcome">
-                <img src="" alt="Anne Brown portrait">
                 <h1>
-                    Hello, I'm Anne!
+                    Hello, I'm John!
                 </h1>
                 <h3>
                     Commercial Photographer
@@ -56,11 +55,7 @@
                     Read More
                 </a>
             </header>
-        </section>
-
-        <!--Services-->
-        <div class="services_div">
-            <section class="services">
+            <div class="services_div">
                 <div class="food">
                     <h3>food</h3>
                 </div>
@@ -69,9 +64,11 @@
                 </div>
                 <div class="architecture">
                     <h3>architecture</h3>
-                </div>
-            </section>
-        </div>
+            </div>
+        </section>
+
+        <!--Services-->
+        
 
         <!--My Works-->
         <div class="works_div">
