--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
         
 
         <!--My Works-->
-        <div class="works_div">
+        <div>
             <section class="works">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
+                <a href="#"><img src="#" alt=""></a>
             </section>
         </div>
 
